src/tests/parse_errors/019.ura
// parse_errors/019 — `pub` inside struct must be followed by `fn`
use "@/header"

struct Counter:
    n int

    pub n int

main():
    output("hi\n")